--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <header class="header-title">
         <h1>Upgrade your life!</h1>
         <h2>Join the GHOST experience</h2> <!-- Added tagline -->
-        <img src="/IMAGES/Client 14.jpeg" alt="Client 14.jpeg">
+        <img src="IMAGES/Client 14.jpeg" alt="Client 14.jpeg">
     </header>
         <main class="container">
         <section class="services-container">
             <div class="image-column">
-                <img src="/IMAGES/Client 1.jpg" alt="Client 1.jpg">
-                <img src="/IMAGES/Client 2.jpg" alt="Client 2.jpg">
-                <img src="/IMAGES/Client 3.jpg" alt="Client 3.jpg">
-                <img src="/IMAGES/Client 7.jpg" alt="Client 7.jpg">
-                <img src="/IMAGES/Client 9.jpg" alt="Client 9.jpg">
+                <img src="IMAGES/Client 1.jpg" alt="Client 1.jpg">
+                <img src="IMAGES/Client 2.jpg" alt="Client 2.jpg">
+                <img src="IMAGES/Client 3.jpg" alt="Client 3.jpg">
+                <img src="IMAGES/Client 7.jpg" alt="Client 7.jpg">
+                <img src="IMAGES/Client 9.jpg" alt="Client 9.jpg">
             </div>
             <div class="services-section">
                 <h2>SERVICES</h2>
@@ -42,20 +42,20 @@
                 </ul>
             </div>
             <div class="image-column">
-                <img src="/IMAGES/Client 4.jpg" alt="Client 4.jpg">
-                <img src="/IMAGES/Client 5.jpg" alt="Client 5.jpg">
-                <img src="/IMAGES/Client 6.jpg" alt="Client 6.jpg">
-                <img src="/IMAGES/Client 8.jpg" alt="Client 8.jpg">
+                <img src="IMAGES/Client 4.jpg" alt="Client 4.jpg">
+                <img src="IMAGES/Client 5.jpg" alt="Client 5.jpg">
+                <img src="IMAGES/Client 6.jpg" alt="Client 6.jpg">
+                <img src="IMAGES/Client 8.jpg" alt="Client 8.jpg">
             </div>
         </section>
         <section class="reviews">
             <h2>REVIEWS</h2>
             <div class="reviews-images">
-                <img src="/IMAGES/Client 15.jpg" alt="Client 15.jpg">
-                <img src="/IMAGES/Client 16.jpg" alt="Client 16.jpg">
-                <img src="/IMAGES/Client 17.jpg" alt="Client 17.jpg">
-                <img src="/IMAGES/Client 18.jpg" alt="Client 18.jpg">
-                <img src="/IMAGES/Client 19.jpg" alt="Client 19.jpg">
+                <img src="IMAGES/Client 15.jpg" alt="Client 15.jpg">
+                <img src="IMAGES/Client 16.jpg" alt="Client 16.jpg">
+                <img src="IMAGES/Client 17.jpg" alt="Client 17.jpg">
+                <img src="IMAGES/Client 18.jpg" alt="Client 18.jpg">
+                <img src="IMAGES/Client 19.jpg" alt="Client 19.jpg">
             </div>
         </section>
         <section class="contact">
